[metadata]
name = pytest-astropy
version = 0.6.0
url = https://astropy.org
author = The Astropy Developers
author_email = astropy.team@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Utilities
license = BSD
description = Meta-package containing dependencies for testing
long_description = file: README.rst
keywords = pytest, py.test, remotedata, openfiles, doctestplus

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    pytest>=3.1.0
    pytest-doctestplus>=0.2.0
    pytest-remotedata>=0.3.1
    pytest-openfiles>=0.3.1
    pytest-astropy-header>=0.1.2
    pytest-arraydiff>=0.1
    pytest-filter-subpackage>=0.1
    pytest-mpl>=0.11
    pytest-cov
    hypothesis
