[metadata]
name = pytest-astropy
url = https://github.com/astropy/pytest-astropy
author = The Astropy Developers
author_email = astropy.team@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Framework :: Hypothesis
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Utilities
license = BSD
description = Meta-package containing dependencies for testing
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = pytest, remotedata, openfiles, doctestplus, hypothesis, property-based testing

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    pytest>=4.6
    pytest-doctestplus>=0.11.0
    pytest-remotedata>=0.3.1
    pytest-openfiles>=0.3.1
    pytest-astropy-header>=0.1.2
    pytest-arraydiff>=0.1
    pytest-filter-subpackage>=0.1
    pytest-cov>=2.3.1
    pytest-mock>=2.0
    attrs>=19.2.0
    hypothesis>=5.1
    # We don't include the following for now since it brings in
    # matplotlib as a dependency.
    # pytest-mpl>=0.11
